--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@neondatabase/api-client": "^1.10.0",
     "@segment/analytics-node": "^1.0.0-beta.26",
+    "@vitest/coverage-v8": "^1.6.0",
     "axios": "^1.4.0",
     "axios-debug-log": "^1.0.0",
     "chalk": "^5.2.0",
